[package]
name = "everblu-meters-rs"
version = "0.1.0"
edition = "2021"
authors = [ "tomahna" ]
description = "Read Itron EverBlu Cyble water meters via RADIAN protocol over CC1101 RF transceiver"
license = "MIT"

[[bin]]
name = "everblu-meters"
path = "src/main.rs"

[dependencies]
crc = "3.4.0"
log = "0.4"
simple_logger = "5.1.0"
rppal = "0.19"
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
hex = "0.4.3"
