[package]
name = "hass-everblu-meter"
version = "0.3.2"
edition = "2021"
authors = [ "tomahna" ]
description = "Read Itron EverBlu Cyble water meters via RADIAN protocol over CC1101 RF transceiver"
repository = "https://github.com/Tomahna/hass_everblu_meter"
license = "MIT"

[[bin]]
name = "hass-everblu-meter"
path = "src/main.rs"

[dependencies]
crc = "3.4.0"
log = "0.4"
simple_logger = "5.1.0"
rppal = "0.19"
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
hex = "0.4.3"

[package.metadata.deb]
maintainer = "tomahna"
copyright = "2026, tomahna"
section = "misc"
priority = "optional"
depends = "$auto, systemd"
maintainer-scripts = "debian/"
systemd-units = { enable = false }

# Assets to include in the package
assets = [
    # Binary
    ["target/release/hass-everblu-meter", "usr/bin/", "755"],

    # Example configuration
    ["config.toml.example", "etc/hass-everblu-meter/config.toml", "644"],

    # Documentation
    ["README.md", "usr/share/doc/hass-everblu-meter/", "644"],
]

# Architecture-specific overrides
[package.metadata.deb.variants.armhf] # For 32-bit ARM (armv7-unknown-linux-gnueabihf)
depends = "$auto"

[package.metadata.deb.variants.arm64] # For 64-bit ARM (aarch64-unknown-linux-gnu)
depends = "$auto"

